0.7.2:

2008-07-23  Siavash Safi  <siavash.safi@gmail.com>

	* autogen.sh:
	* clutter-cairo/Makefile.am:
	* clutter-cairo/README:
	* clutter-cairo/
	* clutter-gtk/Makefile.am:
	* clutter-gtk/clutter-gtkmm.h:
	* clutter-gtk/clutter-gtkmm.pc.in:
	* clutter-gtk/clutter-gtkmm/Makefile.am:
	* clutter-gtk/clutter-gtkmm/init.cc:
	* clutter-gtk/clutter-gtkmm/init.h:
	* clutter-gtk/clutter-gtkmm/private/Makefile.am:
	* clutter-gtk/clutter-gtkmm/wrap_init.h:
	* clutter-gtk/cluttermm-gtk-config.h.in:
	* clutter-gtk/cluttermm-gtk.h:
	* clutter-gtk/cluttermm-gtk.pc.in:
	* clutter-gtk/cluttermm-gtk/Makefile.am:
	* clutter-gtk/cluttermm-gtk/init.cc:
	* clutter-gtk/cluttermm-gtk/init.h:
	* clutter-gtk/cluttermm-gtk/private/Makefile.am:
	* clutter-gtk/cluttermm-gtk/wrap_init.h:
	* clutter-gtk/src/Makefile.am:
	* clutter-gtk/src/embed.hg:
	* clutter/Makefile.am:
	* clutter/README:
	* clutter/
	* configure.in:
	* docs/reference/Doxyfile.in:
	* docs/reference/Makefile.am:
	* examples/Makefile.am:
	* examples/Makefile.am_fragment:
	* examples/effect.cc:
	* examples/embed-gtk.cc:
	* examples/flowers.cc:
	* examples/simple-cairo.cc:
	* examples/test-actors.cc:
	* examples/test-boxes.cc:
	* scripts/ltmain.sh:
	* tools/extra_defs_gen/Makefile.am:
	* tools/extra_defs_gen/generate_defs_clutter.cc:
	* tools/extra_defs_gen/generate_defs_clutter_cairo.cc:
	* tools/extra_defs_gen/generate_defs_clutter_gtk.cc: Updated the sources
	to use clutter-gtkmm, removed all cluttermm and clutter-cairomm stuff and
	some small fixes.

2008-07-14  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* configure.in: Split clutter-gtkmm into this module, out of the 
	main cluttermm module, because some people need the extra modularity.
	This does not yet build (and will probalby need more work) because 
	there is no clutter-gtk-0.8 yet.

2008-07-05  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Post-release version bump to 0.7.1.

0.7.0:

2008-07-05  Armin Burgmeier  <armin@openismus.com>
