@@ -1,13 +1,13 @@
-#ifndef _LIBCLUTTERMM_CONFIG_H
-#define _LIBCLUTTERMM_CONFIG_H 1
+#ifndef _LIBCLUTTER_GTKMM_CONFIG_H
+#define _LIBCLUTTER_GTKMM_CONFIG_H 1
 
 #include "glibmmconfig.h"
 
 /* version numbers */
-#undef LIBCLUTTERMM_MAJOR_VERSION
-#undef LIBCLUTTERMM_MINOR_VERSION
-#undef LIBCLUTTERMM_MICRO_VERSION
-#undef LIBCLUTTERMM_VERSION
+#undef LIBCLUTTER_GTKMM_MAJOR_VERSION
+#undef LIBCLUTTER_GTKMM_MINOR_VERSION
+#undef LIBCLUTTER_GTKMM_MICRO_VERSION
+#undef LIBCLUTTER_GTKMM_VERSION
 
-#endif /* _LIBCLUTTERMM_CONFIG_H */
+#endif /* _LIBCLUTTER_GTKMM_CONFIG_H */
 
