@@ -1,1 +1,1 @@
-files_tools_m4 = convert.m4 convert_cluttermm.m4
+files_tools_m4 = convert.m4 convert_clutter-gtkmm.m4
